--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,65 @@
-# YOLOv5 requirements
-# Usage: pip install -r requirements.txt
-
-# Base ----------------------------------------
-matplotlib>=3.2.2
-numpy>=1.18.5
-opencv-python>=4.1.1
-Pillow>=7.1.2
-PyYAML>=5.3.1
-requests>=2.23.0
-scipy>=1.4.1
-torch>=1.7.0  # see https://pytorch.org/get-started/locally/ (recommended)
-torchvision>=0.8.1
-tqdm>=4.64.0
-# protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
-
-# Logging -------------------------------------
-tensorboard>=2.4.1
-# clearml>=1.2.0
-# comet
-
-# Plotting ------------------------------------
-pandas>=1.1.4
-seaborn>=0.11.0
-
-# Export --------------------------------------
-# coremltools>=6.0  # CoreML export
-# onnx>=1.9.0  # ONNX export
-# onnx-simplifier>=0.4.1  # ONNX simplifier
-# nvidia-pyindex  # TensorRT export
-# nvidia-tensorrt  # TensorRT export
-# scikit-learn<=1.1.2  # CoreML quantization
-# tensorflow>=2.4.1  # TF exports (-cpu, -aarch64, -macos)
-# tensorflowjs>=3.9.0  # TF.js export
-# openvino-dev  # OpenVINO export
-
-# Deploy --------------------------------------
-# tritonclient[all]~=2.24.0
-
-# Extras --------------------------------------
-ipython  # interactive notebook
-psutil  # system utilization
-thop>=0.1.1  # FLOPs computation
-# mss  # screenshots
-# albumentations>=1.0.3
-# pycocotools>=2.0  # COCO mAP
-# roboflow
+absl-py==1.3.0
+backcall==0.2.0
+cachetools==4.2.4
+chardet==3.0.4
+click==8.1.3
+colorama==0.4.6
+decorator==5.1.1
+docopt==0.6.2
+Flask==2.2.2
+fonttools==4.25.0
+gitdb==4.0.9
+GitPython==3.1.29
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+grpcio==1.50.0
+idna==2.10
+importlib-metadata==5.0.0
+ipython==7.34.0
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.2
+kiwisolver==1.4.4
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.5.3
+matplotlib-inline==0.1.6
+munkres==1.1.4
+numpy==1.18.5
+oauthlib==3.2.2
+opencv-python==4.6.0.66
+pandas==1.1.4
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==7.1.2
+pipreqs==0.4.11
+ply==3.11
+prompt-toolkit==3.0.32
+protobuf==3.20.1
+psutil==5.9.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.13.0
+PyQt5==5.15.7
+pytz==2022.6
+PyYAML==5.3.1
+requests==2.23.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scipy==1.4.1
+seaborn==0.11.0
+smmap==5.0.0
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.1
+thop==0.1.1.post2209072238
+torch==1.12.0
+torchaudio==0.12.0
+torchvision==0.13.0
+tqdm==4.64.0
+traitlets==5.5.0
+urllib3==1.25.11
+wcwidth==0.2.5
+Werkzeug==2.2.2
+wincertstore==0.2
+yarg==0.1.9
+zipp==3.10.0
